# genetic-decipher

./: .gitattributes  .gitignore  README.md  api.py  gencipher_controller.py  main.py  pyproject.toml  test.py  tox.ini
.github/workflows/: tests.yml
data/ngrams_scores/: english_bigrams.dict  english_monograms.dict  english_trigrams.dict
gencipher/: crossover.py  fitness.py  model.py  mutation.py  utils.py
ngrams_scores/: english_bigrams.dict  english_trigrams.dict
routers/: gencipher_controller.py
src/gencipher/: cipherkey.py  crossover.py  fitness.py  model.py  mutation.py  ngram.py  utils.py
tests/: conftest.py  gencipher_profile.py  test_gencipher.py  test_gencipher_cipherkey.py  test_gencipher_crossover.py  test_gencipher_fitness.py  test_gencipher_model.py  test_gencipher_mutation.py  test_gencipher_ngram.py  test_gencipher_utils.py
