[tool.poetry]
name = "backend"
version = "0.1.0"
description = "cryptogram decoder API"
authors = ["alejandropr05 <alejandropr05@hotmail.com>"]
readme = "README.md"
homepage = ""
repository = "https://github.com/alejandropr5/cryptogram-decoder/tree/main/backend"
packages = [{include = "gencipher", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.25.2"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
fastapi-utils = "^0.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = "^1.6.0"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
tox = "^4.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[options.package_data]
gencipher = "py.typed"

[flake8]
max-line-length = 79

[tool.pytest.ini_options]
addopts = "--cov=gencipher --cov-report=html"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
