[tool.poetry]
name = "genetic-decipher"
version = "0.1.0"
description = "Python tool for deciphering cryptograms using genetic algorithms."
authors = ["alejandropr05 <alejandropr05@hotmail.com>"]
maintainers = ["alejandropr05 <alejandropr05@hotmail.com>"]
homepage = ""
repository = "https://github.com/alejandropr5/genetic-decipher"
readme = "README.md"
packages = [{include = "gencipher", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.25.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = "^1.6.0"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
tox = "^4.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[options.package_data]
gencipher = "py.typed"

[flake8]
max-line-length = 79

[tool.pytest.ini_options]
addopts = "--cov=gencipher"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
